--- a/src/wasmMain/resources/index.html
+++ b/src/wasmMain/resources/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Wasm Mandlebrot</title>
+<style>
+.ascii-art {
+    font-family: monospace;
+    white-space: pre;
+}
+</style>
 </head>
 <body>
 <script src="wasmMandlebrot.js"></script>
