--- a/src/wasmMain/resources/index.html
+++ b/src/wasmMain/resources/index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<canvas id="display" width="400" height="400" />
+<canvas id="display"/>
 <script src="wasmMandlebrot.js"></script>
 </body>
 </html>
